feat: product service
