# src/product/dto/create-product.dto.ts
@@ -1,0 +1,5 @@
+import { OmitType } from '@nestjs/swagger';
+
+import { ProductDoc } from '../entities/product.entity';
+
+export class CreateProductDto extends OmitType(ProductDoc, [] as const) {}
